add deploy and byok
